--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,11 @@
   </dependencyManagement>
 
   <dependencies>
-<!--    <dependency>-->
-<!--      <groupId>io.smallrye.reactive</groupId>-->
-<!--      <artifactId>mutiny</artifactId>-->
-<!--      <version>1.0.0</version>-->
-<!--    </dependency>-->
+    <!--    <dependency>-->
+    <!--      <groupId>io.smallrye.reactive</groupId>-->
+    <!--      <artifactId>mutiny</artifactId>-->
+    <!--      <version>1.7.0</version>-->
+    <!--    </dependency>-->
 
     <dependency>
       <groupId>io.smallrye.reactive</groupId>
@@ -51,6 +51,25 @@
     <dependency>
       <groupId>io.smallrye.reactive</groupId>
       <artifactId>smallrye-mutiny-vertx-web</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.smallrye.reactive</groupId>
+      <artifactId>smallrye-mutiny-vertx-pg-client</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>1.18.1</version>
+    </dependency>
+
+    <!-- Needed for the setup.sql script -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.6.0</version>
+      <scope>runtime</scope>
     </dependency>
 
     <dependency>
